test/syntax/fail/lexer/string/invalid_escape_sequence.expected
File "dummy.sync", line 1, character 12:
 1 | let x = "\p"
                ^

Error: Invalid escape sequence.
